--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</ul>
 		<img src="icon/yellow-usd.png" alt="usd">
 	</div>
-
+<!--frames-->
 	<div class="drop-frames">
 			<span class="drop-number num1">#1</span>
 			<div class="droppable"> 
