--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<form>
 		<button type="button">OK</button>
 		<button type="button">Cancel</button>
+		<button type="button">Third commit</button>
 	</form>
 </div>
 	<script type="text/javascript" src="script.js"></script>
